<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha=".95"
    android:background="@drawable/tc2"

    tools:context="com.example.utkarsh.ucalculator.MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:enabled="false"
        android:gravity="bottom"
        android:lines="2"
        android:maxLines="2"
        android:textColor="@android:color/background_light"

        android:textColorHighlight="@android:color/holo_orange_dark"
        android:textSize="20sp" android:inputType=""/>


    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="218dp"
        android:background="@android:color/transparent"

        android:text="@string/_7"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:alpha="1"
        android:textSize="20sp"
        android:background="@android:color/transparent"

        android:text="@string/_8"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:layout_toRightOf="@+id/button8"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_9"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button9"
        android:layout_toEndOf="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:textSize="20sp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/divide"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_below="@+id/button7"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_4"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button4"
        android:textSize="20sp"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/button4"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_1"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button1"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/dot"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_5"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toEndOf="@+id/button1"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/button1"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_toEndOf="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:textSize="20sp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_0"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_toEndOf="@+id/button8"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/button8"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_6"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:textSize="20sp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/_3"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button0"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="Equals"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_toEndOf="@+id/button9"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/button9"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/mul"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_above="@+id/buttonEqual"
        android:layout_toEndOf="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/sub"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSub"
        android:layout_toEndOf="@+id/buttonEqual"
        android:layout_toRightOf="@+id/buttonEqual"
        android:textSize="20sp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="@string/add"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAdd"
        android:layout_toEndOf="@+id/buttonEqual"
        android:layout_toRightOf="@+id/buttonEqual"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:text="Clear"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/element1"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
      />

    <TextView
        android:id="@+id/element2"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/element1"
        android:layout_alignStart="@+id/element1"
        android:layout_below="@+id/element1"
        android:textColor="@android:color/white"

        />

    <TextView
        android:id="@+id/operator1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/element1"
        android:layout_toLeftOf="@+id/element2"
        android:layout_toStartOf="@+id/element2"
        android:textColor="@android:color/holo_orange_dark"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:text="TechnoCracy Task"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonClear"
        android:layout_alignRight="@+id/buttonClear"
        android:layout_below="@+id/buttonClear"
        android:layout_marginTop="16dp"
        android:text="Utkarsh Choubey CSE 2nd Sem"
        android:textColor="@android:color/white" />

</RelativeLayout>
